Fix bug with horizontal scrollbar in dashboard

--- a/eQuiz/modules/eQuiz.Web/Areas/Student/Styles/equiz-temp.css
+++ b/eQuiz/modules/eQuiz.Web/Areas/Student/Styles/equiz-temp.css
@@ -636,6 +636,9 @@ caption.dashboard span {
     margin-right: 5vh;
     text-decoration:underline
 }
+.header .row {
+    width: 100%;
+}
 
 .quizInRunLink {
     color: white;
